# render_engine_theme_kjaymiller

./: .gitignore  README.md  justfile  noxfile.py  pyproject.toml  requirements-test.txt  requirements.txt  tailwind.config.js
.devcontainer/: devcontainer.json  entrypoint.sh
.github/workflows/: docs.yml  lint.yml  publish.yml  static.yml  test.yml
docs/: app.py  requirements.txt
docs/output/: docs.html  index.html  theme-settings.html  theme.html
docs/pages/: settings.md  theme.md
output/: docs.html  index.html  kjaymiller-render-engine-theme.html  theme-settings.html  theme.html
output/static/css/: microblog_archive.css  pygments.css  tailwind.css
src/render_engine_theme_kjaymiller/: __init__.py  kjaymiller.py  tailwind_colors.py  utils.py
src/render_engine_theme_kjaymiller/static/css/: tailwind.css
src/render_engine_theme_kjaymiller/templates/: _analytics.html  _archive.html  _footer.html  _head.html  _header.html  base.html  blog.html  blog_list.html  contact.html  footer.html  header.html  index.html  newsletter.html  page.html  re-kjm-social-cards.html
src/render_engine_theme_kjaymiller/templates/components/: _footer.html  _header.html  page_title.html  social-cards.html
src/render_engine_theme_kjaymiller/templates/kjaymiller_com/: _head.html  _og_card.html  base.html
src/render_engine_theme_kjaymiller/templates/kjaymiller_com/components/: _base.html  _footer.html  _header.html  _og_card.html  social-cards.html
tests/: conftest.py  test_a11y.py  test_blog_html.py  test_collection_page.md  test_color_spec.py  test_generation.py  test_stylesheets.py
