[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-theme-kjaymiller"
dynamic = ["version"]
description = "This is a theme based on the design of kjaymiller.com at the time"
readme = "README.md"

dependencies = [
    'jinja2',
    'render-engine-tailwindcss==2023.7.1a2'
    ]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff",
    "black",
    ]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/kjaymiller/render-engine-theme-kjaymiller"
documentation = "https://example.com/docs"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]
ignore-init-module-imports = true

[tool.black]
target-version =  ["py311"]
line-length = 120
