[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render-engine-theme-kjaymiller"
dynamic = ["version"]
description = "This is a theme based on the design of kjaymiller.com at the time"
readme = "README.md"

dependencies = [
    'jinja2',
    'render-engine-tailwindcss==2023.7.1a2',
    "render-engine>=2023.10.1"
    ]

[project.optional-dependencies]
dev = [
    "axe-playwright-python",
    "black",
    "playwright",
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pytest-playwright",
    "ruff",
    ]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://kjaymiller.github.io/render_engine_theme_kjaymiller"
repository = "https://github.com/kjaymiller/render-engine-theme-kjaymiller"
documentation = "https://github.io/kjaymiller/render-engine-theme-kjaymille"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.semantic_release]
version_toml = "pyproject.toml:project.version"
branch = "main"

[tool.ruff]
select = ["E", "F", "I", "UP"]
target-version = "py311"
line-length = 120
src = ["src"]
ignore-init-module-imports = true

[tool.black]
target-version =  ["py311"]
line-length = 120
